--- a/intl.zh-CN/常见问题/常见问题隐藏目录/为什么我在控制台里看不到漏洞或指定设备的漏洞？.md
+++ b/intl.zh-CN/常见问题/常见问题隐藏目录/为什么我在控制台里看不到漏洞或指定设备的漏洞？.md
@@ -6,7 +6,7 @@
 
 如果您的资产中不存在高危漏洞，那您在云安全中心控制台**漏洞修复**页面将看到**暂无数据**的提示，漏洞列表中也不会显示任何漏洞的数据。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093381049684_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093470949684_zh-CN.png)
 
 ## 解决方法 {#section_s5l_xxt_teg .section}
 
@@ -16,19 +16,19 @@
 
     您可以在云安全中心**总览**页面，查看未安装Agent（也就是**未保护资产**）的资产数量，并单击未保护资产数量跳转到Agent安装页面，对还未安装或Agent已离线的资产安装Agent插件。关于Agent插件安装的详细操作，参见[安装Agent](../../../../intl.zh-CN/接入云安全中心/安装Agent.md#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093381049685_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093470949685_zh-CN.png)
 
 2.  在**设置**中，打开中、低危漏洞告警通知，您将会收到所有漏洞的通知。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093381149686_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093470949686_zh-CN.png)
 
-3.  云安全中心每天早晨定时扫描漏洞。如果您当天新购买了ECS，当天不会触发漏洞扫描，因此您在云安全中心中不会看到相关资产的漏洞数据。您需要**立即手动执行**漏洞检测：在**资产管理**列表中，勾选需要进行漏洞扫描的资产，并单击**一键安全检查**，然后勾选您需要检测的内容。
+3.  云安全中心定时扫描漏洞。如果在定时扫描之后新购买了ECS，则购买当天不会触发漏洞扫描，因此您在云安全中心中不会看到相关资产的漏洞数据。您需要**立即手动执行**漏洞检测：在**资产管理**列表中，勾选需要进行漏洞扫描的资产，并单击**一键安全检查**，然后勾选您需要检测的内容。
 
     **说明：** 
 
     -   通常情况下，20分钟后可查看检测结果，请您耐心等待。
     -   未开启实时防护的资产，无法执行**一键安全检查**，您需要先对该资产安装Agent插件，等待资产**实时防护**状态为**开启**后，才能执行**一键安全检查**。
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093381149695_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/600427/156093471049695_zh-CN.png)
 
     如果需要调整自动执行漏洞扫描的资产范围，或修改应用漏洞的自动检测周期，可在**漏洞管理设置**中进行修改。
 
