--- a/intl.zh-CN/用户指南/概述.md
+++ b/intl.zh-CN/用户指南/概述.md
@@ -10,17 +10,17 @@
 
 ## 查看资产保护状态 {#section_em3_k11_2hb .section}
 
--   [资产列表](intl.zh-CN/用户指南/资产列表.md#)
+-   [资产列表](intl.zh-CN/用户指南/资产管理.md#)
 
 ## 查看和处理告警事件 {#section_aqk_l11_2hb .section}
 
--   [安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)
--   [病毒云查杀](intl.zh-CN/用户指南/安全告警/病毒云查杀.md#)
--   [查看和处理/批量处理告警事件](intl.zh-CN/用户指南/安全告警/查看和处理__批量处理告警事件.md#)
--   [告警自动化关联分析](intl.zh-CN/用户指南/安全告警/告警自动化关联分析.md#)
--   [查看告警溯源和排查方案](intl.zh-CN/用户指南/安全告警/查看告警溯源和排查方案.md#)
--   [文件隔离箱](intl.zh-CN/用户指南/安全告警/文件隔离箱.md#)
--   [一键导出告警事件列表](intl.zh-CN/用户指南/安全告警/一键导出事件列表.md#)
+-   [安全告警类型](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)
+-   [病毒云查杀](intl.zh-CN/用户指南/安全告警处理/病毒云查杀.md#)
+-   [查看和处理/批量处理告警事件](intl.zh-CN/用户指南/安全告警处理/查看和处理告警事件.md#)
+-   [告警自动化关联分析](intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md#)
+-   [查看告警溯源和排查方案](intl.zh-CN/用户指南/安全告警处理/查看告警溯源和排查方案.md#)
+-   [文件隔离箱](intl.zh-CN/用户指南/安全告警处理/文件隔离箱.md#)
+-   [一键导出告警事件列表](intl.zh-CN/用户指南/安全告警处理/一键导出事件列表.md#)
 
 ## 漏洞检测与管理 {#section_q1p_db1_2hb .section}
 
@@ -44,7 +44,7 @@
 
 ## 日志分析 {#section_qql_2b1_2hb .section}
 
--   [日志分析限制说明](intl.zh-CN/用户指南/日志分析/限制说明.md#)
+-   [日志分析限制说明](intl.zh-CN/用户指南/日志分析/使用前必读.md#)
 -   [开通日志分析服务](intl.zh-CN/用户指南/日志分析/开通日志分析服务.md#)
 -   [查询实时日志分析](intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md#)
 -   [日志报表仪表盘](intl.zh-CN/用户指南/日志分析/日志报表仪表盘.md#)
@@ -56,7 +56,7 @@
 
 ## 查看云产品安全配置检测 {#section_fdm_2b1_2hb .section}
 
--   [云平台最佳实践](intl.zh-CN/用户指南/云平台最佳实践.md#)
+-   [云平台配置检查](intl.zh-CN/用户指南/云平台最佳实践.md#)
 
 ## 资产指纹 {#section_f31_tc1_2hb .section}
 
@@ -69,8 +69,8 @@
 
 ## 安全设置 {#section_e5b_tc1_2hb .section}
 
--   [安全配置](intl.zh-CN/用户指南/设置/安全配置.md#)
+-   [安全配置](intl.zh-CN/用户指南/设置/设置.md#)
 -   [安全日报](intl.zh-CN/用户指南/设置/安全日报.md#)
 -   [安装/卸载Agent插件](intl.zh-CN/用户指南/设置/安装__卸载插件.md#)
--   [告警通知设置](intl.zh-CN/用户指南/设置/告警设置.md#)
+-   [告警通知设置](intl.zh-CN/用户指南/设置/通知.md#)
 
