--- a/cn.zh-CN/用户指南/漏洞管理/应急漏洞.md
+++ b/cn.zh-CN/用户指南/漏洞管理/应急漏洞.md
@@ -1,32 +1,45 @@
 # 应急漏洞 {#concept_kw1_y11_4gb .concept}
 
-云安全中心支持对网络上突然出现的紧急漏洞进行检测和修复。
+云安全中心企业版支持对互联网上突然出现的紧急漏洞进行检测和修复。
 
 云安全中心应急漏洞页面会展示近期爆发出的高危漏洞，您可通过云安全中心漏洞管理提供的检测功能对您的资产进行实时检测，确认是否有资产受到影响。
+
+**说明：** 基础版和高级版不支持应急漏洞，基础版和高级版用户需升级到企业版才能使用该功能。
+
+云安全中心提供的应急漏洞功能具有以下特性：
+
+-   应急漏洞披露时间支持排序
+-   支持应急漏洞检测与告警
+-   实时展示应急漏洞检测进度
+-   实时展示应急漏洞影响的资产数量并提供漏洞详情信息
+-   实时展示应急漏洞的修复紧急程度
+-   对检测出的应急漏洞提供修复建议
+-   支持应急漏洞修复完成后进行验证，确认该漏洞是否已成功修复
 
 ## 操作步骤 {#section_l5r_ynl_zgb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  定位到**漏洞管理** \> **应急漏洞**。
+3.  您可以在**应急漏洞**页面查看云安全中心检测到的最新应急漏洞情况和应急漏洞记录，并对应急漏洞进行检测，确认该漏洞是否对您的资产有影响。
+    -   单击**应急漏洞**页面右侧的**立即检测**，对应急漏洞执行检测。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/155301439539938_zh-CN.png)
+        对于从未被检测过的漏洞，会在**影响资产数**一栏中提示**未检测**。
 
-3.  您可以在**应急漏洞**页面查看云安全中心检测到的最新应急漏洞情况和应急漏洞记录。
-    -   单击**应急漏洞**页面右侧的**立即检测**/**再次检测**按钮执行漏洞检测，确认该漏洞是否对您的资产有影响。
+        **说明：** 如果有检测到风险，云安全中心会在**影响的资产数**红色高亮显示，并展示检测到存在该应急漏洞的资产数量。您可单击该应急漏洞名称前往漏洞详情页面，查看漏洞具体信息和对该漏洞进行处理。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/155301439539960_zh-CN.png)
+    -   查看漏洞检测进度。
 
-        **说明：** 目前**检测**过程中不会提示检测进度。如果有检测到风险，云安全中心会提示您**XX个资产急需修复**。您可单击该资产名称前往漏洞详情页面查看漏洞具体信息和对该漏洞进行处理。
+        单击**立即检测**后，云安全中心会为您实时展示该应急漏洞的检测进度。
 
-        **说明：** 如果您的资产数量较多，执行检测后会显示**暂无风险**，此时扫描并未全部完成，建议您等待最长不超过20分钟确保扫描完毕。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103045049829_zh-CN.png)
 
-    -   单击漏洞名称可跳转到该漏洞的详情页面，查看该应急漏洞的详细信息、影响的资产、修复必要性和部分漏洞的建议解决方案。
+    -   单击漏洞名称可跳转到该漏洞的详情页面，查看该应急漏洞的详细信息、影响的资产、修复必要性和部分漏洞的修复建议。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/155301439539961_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103045149823_zh-CN.png)
 
         -   您可在应急漏洞详情页面查看该应急漏洞影响的资产信息。
         -   查看应急漏洞的详细状态。
-            -   **已处理**
+            -   **已处理** 
 
                 -   修复成功：漏洞已成功修复。
                 -   修复失败：漏洞修复失败，可能因为漏洞文件已被修改或漏洞文件已不存在。
@@ -35,19 +48,23 @@
                 -   回滚失败：漏洞回滚失败、无法回到未处理状态，可能因为漏洞文件已不存在。
                 **说明：** **已处理**的漏洞支持**回滚**操作，漏洞回滚后将重新变为**未处理**的状态。
 
-            -   **未处理**
+            -   **未处理** 
                 -   未修复：漏洞待修复。
-        -   查看漏洞的**修复必要性**。
+        -   查看漏洞的**修复紧急度**。
 
-            漏洞修复必要性是根据漏洞等级、公开时间、服务器真实环境等因素综合分析出来的修复建议说明。
+            漏洞修复紧急度是根据漏洞等级、公开时间、服务器真实环境等因素综合分析出来的修复建议说明。
 
             漏洞修复必要性分为高、中、低三个等级。
 
-            **说明：** 建议立即对**高**修复必要性的漏洞立即修复。
+            **说明：** 建议立即对**高**修复紧急度的漏洞立即修复。
 
         -   处理应急漏洞。
+            -   根据漏洞详情页面提示的漏洞**修复建议**，在受影响的服务器中手动进行修复。
+
+                ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103045149825_zh-CN.png)
+
             -   **验证**：验证漏洞是否已修复成功。
-            -   **忽略**：忽略漏洞后态势感知将不再提示该漏洞。
+            -   **忽略**：忽略漏洞，云安全中心本次将不再提示该漏洞。
 
                 **说明：** 被**忽略**的漏洞状态将转为**已处理**。如需云安全中心继续对该漏洞进行告警提示，可在**已处理**的漏洞列表中找到该漏洞并对其**取消忽略**。
 
