--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -4,13 +4,13 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155952738537206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156104613149837_zh-CN.png)
 
 **总览**页面展示以下模块：
 
 -   云安全中心的版本信息，提供**升级**高级版、企业版、扩充资产规模和**续费**操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155952738548508_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156104613148508_zh-CN.png)
 
 -   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见安全分值表。
 
@@ -19,20 +19,20 @@
     -   待处理告警
     -   待修复漏洞
     -   基线检查
-    -   云产品最佳实践（云产品安全风险项）
+    -   云平台配置检查（云产品安全风险项）
     -   攻击事件等其他风险或威胁
 -   查看您已安装和未安装Agent插件的资产数量，也就是已在云安全中心防护范围内的资产和还未受云安全中心防护的资产数量。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155952738548509_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156104613148509_zh-CN.png)
 
     单击**未保护资产**下的数字，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。有关Agent安装的详细操作，参见[安装Agent](../../../../intl.zh-CN/接入云安全中心/安装Agent.md#)。
 
 -   查看威胁统计数据：
-    -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警处理/安全告警类型.md#)页面。
+    -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)页面。
     -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。详见[漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。
     -   **基线问题**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线问题总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
--   **云安全最佳实践检查**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云安全最佳实践检查页面。详细操作参见[云平台最佳实践](intl.zh-CN/用户指南/云平台最佳实践.md#)。
+-   **云平台配置风险**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云平台配置检查页面。详细操作参见[云平台配置检查](intl.zh-CN/用户指南/云平台配置检查.md#)。
 -   **安全运营**：展示15天内已处理的告警、漏洞、基线配置数量柱状图和趋势图。
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
@@ -58,7 +58,7 @@
 |------|----|
 |缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
 |存在未修复漏洞。|修复漏洞，详见[漏洞管理](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。|
-|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警处理/安全告警类型.md#)。|
+|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型概述](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
 |保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
 |存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../intl.zh-CN/.md#)。|
