--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -86,6 +86,7 @@
 |【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|X|√|√|
 |漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|X|√|√|
+|漏洞管理|应用漏洞|提供系统服务弱口令、系统服务和应用服务的漏洞检测及修复服务。|X|X|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。 【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
@@ -111,4 +112,5 @@
 |应用市场|自定义告警|支持用户自定义告警规则，实时检测威胁，支持第三方日志导入进行实时分析。|X|增值|增值|
 |应用市场|网页防篡改|可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。|X|增值|增值|
 |应用市场|微步威胁情报|提供第三方威胁情报源。|X|增值|增值|
+|设置| | |X|√|√|
 
