--- a/cn.zh-CN/产品简介/新功能发布记录.md
+++ b/cn.zh-CN/产品简介/新功能发布记录.md
@@ -4,6 +4,7 @@
 
 |发布时间|动态说明|影响的版本|相关文档|
 |----|----|-----|----|
+|2019-06-21|云平台最佳实践更名为云产品配置检查。|基础版、高级版、企业版|-|
 |2019-06-20|应急漏洞功能优化，支持展示应急漏洞修复进度。|企业版|[应急漏洞](../../../../intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)|
 |2019-06-19|安全报告上线，通过自定义报告内容、报告展示的数据类型和接收人邮箱地址，实现安全报告的自定义，更好地满足您对于您资产安全状况数据的需求|高级版、企业版|[安全报告](../../../../intl.zh-CN/用户指南/安全报告.md#)|
 |2019-06-16|设置页面全新改版，登录IP拦截加白功能从设置页面下线。|基础版、高级版、企业版|[设置](../../../../intl.zh-CN/用户指南/设置/设置.md#)|
