--- a/cn.zh-CN/用户指南/漏洞管理/应急漏洞.md
+++ b/cn.zh-CN/用户指南/漏洞管理/应急漏洞.md
@@ -1,10 +1,10 @@
 # 应急漏洞 {#concept_kw1_y11_4gb .concept}
 
-云安全中心企业版支持对互联网上突然出现的紧急漏洞进行检测和修复。
+云安全中心支持对互联网上突然出现的紧急漏洞进行检测和修复。
 
 云安全中心应急漏洞页面会展示近期爆发出的高危漏洞，您可通过云安全中心漏洞管理提供的检测功能对您的资产进行实时检测，确认是否有资产受到影响。
 
-**说明：** 基础版和高级版不支持应急漏洞，基础版和高级版用户需升级到企业版才能使用该功能。
+**说明：** 基础版、高级版和企业版都支持应急漏洞功能。
 
 云安全中心提供的应急漏洞功能具有以下特性：
 
@@ -25,7 +25,7 @@
 
         对于从未被检测过的漏洞，会在**影响资产数**一栏中提示**未检测**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103207849831_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156108313549831_zh-CN.png)
 
         **说明：** 如果有检测到风险，云安全中心会在**影响的资产数**红色高亮显示，并展示检测到存在该应急漏洞的资产数量。您可单击该应急漏洞名称前往漏洞详情页面，查看漏洞具体信息和对该漏洞进行处理。
 
@@ -33,11 +33,11 @@
 
         单击**立即检测**后，云安全中心会为您实时展示该应急漏洞的检测进度。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103207849829_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156108313549829_zh-CN.png)
 
     -   单击漏洞名称可跳转到该漏洞的详情页面，查看该应急漏洞的详细信息、影响的资产、修复必要性和部分漏洞的修复建议。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103207849823_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156108313549823_zh-CN.png)
 
         -   您可在应急漏洞详情页面查看该应急漏洞影响的资产信息。
         -   查看应急漏洞的详细状态。
@@ -63,7 +63,7 @@
         -   处理应急漏洞。
             -   根据漏洞详情页面提示的漏洞**修复建议**，在受影响的服务器中手动进行修复。
 
-                ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156103207949825_zh-CN.png)
+                ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/118680/156108313549825_zh-CN.png)
 
             -   **验证**：验证漏洞是否已修复成功。
             -   **忽略**：忽略漏洞，云安全中心本次将不再提示该漏洞。
