--- a/intl.zh-CN/用户指南/云平台配置检查.md
+++ b/intl.zh-CN/用户指南/云平台配置检查.md
@@ -4,20 +4,50 @@
 
 云安全中心云平台配置检查从身份认证、网络访问控制、数据安全、日志审计、基础安全防护五个维度为您提供云产品安全配置的检测，帮助您及时发现您的云产品配置风险并提供相应的修复方案。
 
+## 云平台配置检查项列表 {#section_0zx_00n_ko6 .section}
+
+|支持的检查项|检查类型|说明|
+|------|----|--|
+|云平台-主账号双因素认证配置检查|主账号身份认证及权限|检查是否开启主账号双因素认证配置。在只使用单一密码认证的情况下，黑客可能通过暴力破解等手段获取您的云平台管理密码。建议对云平台管理员账号开启密码加手机短信双重身份认证，防止密码泄露带来的安全隐患。|
+|RAM-子账号多因素认证|子账号身份认证及权限|检查子账号是否启用了多因素认证（Multi-Factor Authentication，简称MFA\)。|
+|云平台-操作审计配置检查|日志审计|检测是否有开启云平台操作审计功能。未开启操作审计，将无法对管理员在云平台的操作行为进行记录、也不符合合规要求。|
+|云盾-主机安全防护状态检查|基础安全防护|检测安骑士Agent插件安装情况。云安全防御体系中，需要部署安骑士解决主机安全防护问题。未部署安骑士将导致云主机缺乏入侵检测及防御的能力，系统无法及时发现各种黑客入侵行为，例如：上传的Webshell、木马等恶意文件、异地登录、账号暴力破解攻击等。|
+|云盾-高防回源配置检查|网络访问控制|检测DDoS高防服务是否有配置仅允许WAF回源IP地址访问。使用DDoS高防服务或Web应用防火墙后，需要对后端服务器真实IP地址进行隐藏，避免攻击者绕过高防或WAF直接攻击云主机。|
+|云盾-WAF回源配置检查|网络访问控制|检测WAF（Web应用防火墙）服务是否有配置仅允许WAF回源IP地址访问。使用DDoS高防服务或Web应用防火墙后，需要对后端服务器真实IP地址进行隐藏，避免攻击者绕过高防或WAF直接攻击云主机。|
+|云盾-AK&账密泄露检测配置|监控告警|检测是否已开启云安全中心AK&账密泄露检测功能。|
+|ECS-密钥对登录检查|身份认证及权限|检测ECS中的Linux主机是否绑定了阿里云SSH密钥对。SSH密钥登录与SSH密码登录方式相比，更加安全便捷。推荐使用阿里云SSH密钥对方式。|
+|ECS-存储加密检查|数据安全|检测ECS主机磁盘是否开启了加密功能。|
+|ECS-自动镜像检查|数据安全|检测ECS磁盘是否开启自动快照功能。自动快照可以提升ECS主机的数据安全，实现容灾备份。|
+|SLB-白名单配置检查|网络访问控制|检测SLB负载均衡实例访问控制配置，http/https服务是否启用了访问控制，并且是否有开放0.0.0.0/0。|
+|SLB-高危端口暴露检查|网络访问控制|检测SLB是否开转发非必要的公共服务端口。|
+|SLB-健康检查|监控告警|检测SLB后端服务器是否可用。|
+|SLB-证书过期检查|监控告警|检测SLB的可用证书是否已过期。|
+|OSS-Bucket权限设置检查|数据安全|检测OSS Bucket权限是否设置成了私有。|
+|OSS敏感文件泄露|数据安全|检测OSS敏感文件是否有设置访问权限。|
+|OSS-日志记录配置检查|数据安全|检测OSS是否有开启日志记录功能。|
+|OSS-跨区域复制配置检查|数据安全|检测OSS是否有开启跨区域复制功能。|
+|RDS-白名单配置检查|网络访问控制|检测RDS的访问控制策略是否有0.0.0.0/0（任意IP）或为空的配置。不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
+|RDS-数据库安全策略检查|数据安全|检测RDS数据库是否开启了SQL审计功能、SSL加密传输功能和透明数据库加密功能。|
+|RDS-开启数据库备份检查|数据安全|检测RDS数据库实例是否开启了数据备份功能。|
+|MongoDB-白名单配置检查|网络访问控制|检测MongoDB的访问控制策略是否有0.0.0.0/0（任意IP）或为空的配置。不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
+|Redis-白名单配置检查|网络访问控制|检测Redis的访问控制策略是否有0.0.0.0/0（任意IP）或为空的配置。不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
+|分析型数据库 PostgreSQL版-白名单配置检查|网络访问控制|检测PostgreSQL的访问控制策略是否有0.0.0.0/0（任意IP）或为空的配置。不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
+|SSL证书有效期检查|数据安全|检测SSL证书是否超出有效期。如果证书过期，您将无法继续使用SSL证书服务。|
+
 ## 操作步骤 {#section_w2z_q2m_3gb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  单击左侧导航栏**云平台配置检查**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623549839_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522249839_zh-CN.png)
 
 3.  在**云平台配置检查**页面单击**立即授权**，打开**云资源访问授权**页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623536046_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236046_zh-CN.png)
 
 4.  单击**同意授权**，允许云安全中心对您相关的云资源进行访问。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623536045_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236045_zh-CN.png)
 
     授权成功后您可以开始使用云产品最佳实践功能检测对应云产品配置是否存在风险，并对风险进行处理。
 
@@ -25,7 +55,7 @@
 
     -   **检测设置**：设置云产品配置项的**检测周期**和**检测时间**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623536047_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236047_zh-CN.png)
 
         检测周期可选周一~周日，支持多选。
 
@@ -33,27 +63,17 @@
 
     -   **立即检测**：对云产品配置进行全量检测，确定是否存在风险项以及影响的资产数量。检测项列表中按检测结果的严重等级由高危到低危进行排序。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623536048_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236048_zh-CN.png)
 
-        目前支持的云产品检测项有以下8类：
-
-        -   云平台-主账号双因素认证配置检查
-        -   云平台-操作审计配置检查
-        -   云盾-高防回源配置检查
-        -   安全组-RDS白名单配置检查
-        -   SLB-高危端口暴露检查
-        -   云盾-WAF回源配置检查
-        -   OSS敏感文件泄露
-        -   RDS-数据库安全策略检查
         **说明：** 全量检测需全部完成后才可进行其他操作，请耐心等待。
 
     -   **验证**：可针对单个检测项进行配置风险验证。如您对部分配置项进行了修改，可单击**验证**检验新的配置是否存在安全风险。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623536049_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236049_zh-CN.png)
 
     -   单击检测项名称可跳转到详情页面，查看对应的检测详情描述、可能产生的影响和处理建议。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156104623636050_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522336050_zh-CN.png)
 
     -   **忽略**：如果您判断检测出的某个风险项不存在安全风险，可单击**忽略**将该检测项状态调整为**已忽略**。**已忽略**的检测项将不会包含在**风险项**总数中。
 
