--- a/cn.zh-CN/用户指南/云平台配置检查.md
+++ b/cn.zh-CN/用户指南/云平台配置检查.md
@@ -39,23 +39,25 @@
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  单击左侧导航栏**云平台配置检查**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522249839_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107049839_zh-CN.png)
 
 3.  在**云平台配置检查**页面单击**立即授权**，打开**云资源访问授权**页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236046_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107050006_zh-CN.png)
+
+    **说明：** 如果您已开通过了云平台配置检查的访问授权，可忽略步骤4和步骤5。
 
 4.  单击**同意授权**，允许云安全中心对您相关的云资源进行访问。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236045_zh-CN.png)
+    授权成功后您可以开始使用云平台配置检查功能对云产品配置是否存在风险进行检查，并对风险进行处理。
 
-    授权成功后您可以开始使用云产品最佳实践功能检测对应云产品配置是否存在风险，并对风险进行处理。
+5.  单击**云平台配置检查**。
 
-    您可以进行以下操作：
+    您可在**云平台配置检查**页面进行以下操作：
 
     -   **检测设置**：设置云产品配置项的**检测周期**和**检测时间**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236047_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036047_zh-CN.png)
 
         检测周期可选周一~周日，支持多选。
 
@@ -63,26 +65,30 @@
 
     -   **立即检测**：对云产品配置进行全量检测，确定是否存在风险项以及影响的资产数量。检测项列表中按检测结果的严重等级由高危到低危进行排序。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236048_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036048_zh-CN.png)
 
         **说明：** 全量检测需全部完成后才可进行其他操作，请耐心等待。
 
     -   **验证**：可针对单个检测项进行配置风险验证。如您对部分配置项进行了修改，可单击**验证**检验新的配置是否存在安全风险。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522236049_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036049_zh-CN.png)
 
     -   单击检测项名称可跳转到详情页面，查看对应的检测详情描述、可能产生的影响和处理建议。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156134522336050_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036050_zh-CN.png)
 
     -   **忽略**：如果您判断检测出的某个风险项不存在安全风险，可单击**忽略**将该检测项状态调整为**已忽略**。**已忽略**的检测项将不会包含在**风险项**总数中。
 
         您也可对**已忽略**的检测项**取消忽略**。
 
-        **说明：** 后续再次进行风险检测时，**已忽略**的检测项将不会被列入风险项中。
+        **说明：** **忽略**只对本次检测结果进行忽略，后续如果再次检测该出该风险，云安全中心仍会展示该检测结果的告警。
 
     -   **标记为误报**：如果您判断检测出的某个风险项属于误报，可单击**标记为误报**将该检测项状态调整为**已标记误报**。
 
         **说明：** 后续再次进行风险检测时，**标记为误报**的检测项将不会被列入风险项中。
+
+    -   导出检测结果CVS文件到本地。
+
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107150010_zh-CN.png)
 
 
