--- a/cn.zh-CN/常见问题/常见问题隐藏目录/安骑士、态势感知和云安全中心的区别.md
+++ b/cn.zh-CN/常见问题/常见问题隐藏目录/安骑士、态势感知和云安全中心的区别.md
@@ -4,11 +4,11 @@
 
 安骑士是阿里云提供的服务器安全服务产品，为您的主机提供实时防护。安骑士支持基础版（免费版）和企业版。基础版和企业版功能差异，参见[功能列表](../../../../intl.zh-CN/产品简介/功能列表.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156154259548766_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156154650348766_zh-CN.png)
 
 云安全中心是由态势感知全新升级而来，继承了态势感知的所有功能，并新增了安全评分总览、网页防篡改、病毒查杀、攻击分析、安全大屏等功能，是实时检测、分析和预警安全威胁的统一安全管理平台。云安全中心提供基础版、高级版和企业版，3个版本的功能详情参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156154259648769_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156154650348769_zh-CN.png)
 
 ## 安骑士企业版升级到云安全中心高级版功能说明 {#section_jxb_tcy_svx .section}
 
@@ -19,19 +19,25 @@
 -   √：支持
 -   X：不支持
 
-|功能|安骑士企业版升级到云安全中心高级版|云安全中心高级版|
-|--|-----------------|--------|
-|安全评分|√（新增功能）|√|
-|安全告警|√|√|
-|资产管理|√|√|
-|漏洞管理|√|√|
-|基线检查|X（原安骑士企业版支持）|X（云安全中心企业版功能）|
-|云平台配置检查|√（新增功能）|√|
-|安全报告|√（新增功能）|√|
-|资产指纹调查|X（原安骑士企业版支持）|X（云安全中心企业版功能）|
-|设置|√（新增钉钉告警推送通知）|√|
-|日志分析|增值服务（支持的日志类型由7类增加到14类）|增值服务（支持14类日志）|
-|网页防篡改|增值服务|增值服务|
+|功能|安骑士企业版升级到云安全中心高级版|
+|--|-----------------|
+|安全评分|√（新增功能）|
+|安全告警|√|
+|资产管理|√|
+|漏洞管理|√|
+|基线检查|X **说明：** 原安骑士企业版支持；云安全中心高级版不支持、企业版支持。
+
+ |
+|云平台配置检查|√（新增功能）|
+|安全报告|√（新增功能）|
+|资产指纹调查|X **说明：** 原安骑士企业版支持；云安全中心高级版不支持、企业版支持。
+
+ |
+|设置|√ **说明：** 新增钉钉告警推送通知。
+
+ |
+|日志分析|增值服务（支持的日志类型由7类增加到14类）|
+|网页防篡改|增值服务|
 
 **说明：** 其他增值功能，如安全大屏、应用白名单和自定义告警等，需升级到对应支持的版本才可开通并使用。详情请参考云安全中心[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)文档。
 
