--- a/cn.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/cn.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -6,7 +6,12 @@
 
 -   [如何降低产品配置？](intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
 -   [联通沃云购买企业版失败](intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
--   [如何购买云安全中心情报资源包？](intl.zh-CN/常见问题/常见问题隐藏目录/如何购买云安全中心情报资源包？.md#)
+-   [云安全中心提示即将到期续费如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示即将到期续费如何处理？.md#)
+-   [云安全中心服务器超出授权数量该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心服务器超出授权数量该如何处理？.md#)
+
+## 权限相关问题 {#section_xwi_c6l_ede .section}
+
+-   [子账户登录提示当前操作未授权FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/子账户登录提示当前操作未授权FAQ.md#)
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
@@ -31,6 +36,7 @@
 
 ## 安全告警相关问题 {#section_q25_5b6_xyk .section}
 
+-   [如何获知我的服务器是否存在安全威胁？](intl.zh-CN/常见问题/常见问题隐藏目录/如何获知我的服务器是否存在安全威胁？.md#)
 -   [如何查看我已开启了哪些防御能力？](intl.zh-CN/常见问题/常见问题隐藏目录/如何查看我已开启了哪些防御能力？.md#)
 -   [隔离操作适用于哪些安全告警类型？](intl.zh-CN/常见问题/常见问题隐藏目录/隔离操作适用于哪些安全告警类型？.md#)
 -   [如何正确处理告警误报？](intl.zh-CN/常见问题/常见问题隐藏目录/如何正确处理告警误报？.md#)
@@ -39,6 +45,7 @@
 -   [哪些类型的异常支持自动查杀而无需手动处理？](intl.zh-CN/常见问题/常见问题隐藏目录/哪些类型的异常支持自动查杀而无需手动处理？.md#)
 -   [安全告警FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/安全告警FAQ.md#)
 -   [云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？.md#)
+-   [云安全中心提示“异常网络链接-访问恶意域名”该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示“异常网络链接-访问恶意域名”该如何处理？.md#)
 
 ## 异常登录相关问题 {#section_dpg_5gj_ygx .section}
 
@@ -68,6 +75,7 @@
 -   [漏洞扫描FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描FAQ.md#)
 -   [Wget缓冲区溢出漏洞检测命中规则说明](intl.zh-CN/常见问题/常见问题隐藏目录/Wget缓冲区溢出漏洞检测命中规则说明.md#)
 -   [为什么我在控制台里看不到漏洞或指定设备的漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/为什么我在控制台里看不到漏洞或指定设备的漏洞？.md#)
+-   [漏洞修复完成后我还需要做什么？](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞修复完成后我还需要做什么？.md#)
 
 ## 基线相关问题 {#section_s9l_3an_gwn .section}
 
