--- a/cn.zh-CN/快速入门/新手入门.md
+++ b/cn.zh-CN/快速入门/新手入门.md
@@ -20,3 +20,7 @@ Agent插件是云安全中心提供的本地安全插件，您必须在要防护
 
 **说明：** 云安全中心**基础版**不支持病毒自动防御，建议升级到**高级版**或**企业版**。
 
+## 如何使用云安全中心的漏洞修复功能？ {#section_m8h_j6x_tgh .section}
+
+  
+
