--- a/intl.zh-CN/用户指南/日志分析/日志类别及参数说明.md
+++ b/intl.zh-CN/用户指南/日志分析/日志类别及参数说明.md
@@ -4,16 +4,19 @@
 
 云安全中心默认开启三大类日志：
 
--   **安全日志**
+-   **安全日志** 
     -   漏洞日志
     -   基线日志
     -   安全告警日志
--   **网络日志**
+-   **网络日志** 
+
     -   DNS日志
     -   本地DNS日志
     -   网络会话日志
     -   Web日志
--   **主机日志**
+    **说明：** 仅企业版用户支持查看网络日志，高级版用户不支持。即高级版用户在控制台日志分析页面仅能查看安全日志和主机日志。
+
+-   **主机日志** 
     -   进程启动日志
     -   网络连接日志
     -   系统登录日志
@@ -63,7 +66,7 @@
 
 |日志来源|描述|备注|
 |----|--|--|
-|漏洞日志|漏洞日志|安全运营产生，实时采集|
-|基线日志|基线日志|安全运营产生，实时采集|
-|安全告警日志|安全告警日志|安全运营产生，实时采集|
+|漏洞日志|漏洞日志|安全运营产生，实时采集。|
+|基线日志|基线日志|安全运营产生，实时采集。|
+|安全告警日志|安全告警日志|安全运营产生，实时采集。|
 
