--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -99,7 +99,9 @@
  |X|X|√|
 |攻击分析|攻击分析|【攻击分析】支持查看系统遭受的Web攻击详情和ECS遭受的暴力破解攻击等攻击信息。|X|X|√|
 |AK和账号密码泄露|AK和账号密码泄露|实时监控Github等第三方代码托管网站，捕获并判定被公开的源代码（包含企业员工私自上传并不小心公开的源代码）中是否含有ECS、RDS、Redis、MySQL等资产的登录名和密码信息。|X|X|√|
-|日志分析|全量日志分析|基于SLS日志，提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。|X|增值|增值|
+|日志分析|全量日志分析|基于SLS日志，提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。 **说明：** 高级版支持主机日志和安全日志，不支持网络日志；企业版支持主机日志、安全日志和网络日志。
+
+ |X|增值|增值|
 |资产指纹|资产指纹|【端口】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。 【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
 
  【进程】收集和呈现进程快照信息，便于自主清点合法进程，检测异常进程。
@@ -112,5 +114,8 @@
 |应用市场|自定义告警|支持用户自定义告警规则，实时检测威胁，支持第三方日志导入进行实时分析。|X|增值|增值|
 |应用市场|网页防篡改|可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。|X|增值|增值|
 |应用市场|微步威胁情报|提供第三方威胁情报源。|X|增值|增值|
-|设置| | |X|√|√|
+|设置|设置|支持对云安全中心病毒查杀、网站后门查杀、Agent防护模式进行配置。|X|√|√|
+|通知|对告警通知进行自定义设置，通过告警设置调整云安全中心向您发送告警通知的方式和要关注的风险等级。|X|√|√|
+|安全日报|对安全日报进行配置。开启安全日报后，云安全中心以邮件形式向您指定的收件人发送每日安全统计信息。|X|√|√|
+|安装/卸载插件|支持Agent插件的安装和卸载。|X|√|√|
 
