--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -29,12 +29,12 @@
 
  |X|√|√|
 |异常账户|基于用户行为分析，对异常可以账号登录系统进行检测。|X|√|√|
-|安全告警|网站后门查杀|【Webshell检测】主机+网络双重检测机制，检测PHP、ASP、JSP等类型的网站脚本文件。 -   主机检测：实时监控主机上网站目录文件变化。
+|网站后门查杀|【Webshell检测】主机+网络双重检测机制，检测PHP、ASP、JSP等类型的网站脚本文件。 -   主机检测：实时监控主机上网站目录文件变化。
 -   网络检测：通过还原后门文件及分析网络协议进行检测。
 
  |X|√|√|
 |【Webshell查杀】支持在控制台一键隔离检测出来的Webshell文件。已隔离文件在30天内可以恢复。|X|√|√|
-|安全告警|恶意进程（云查杀）|【病毒检测】定期扫描进程并监控进程启动事件，通过云查杀机制检测恶意病毒和木马进程。 【病毒查杀】支持在控制台一键中止进程和隔离恶意文件。
+|恶意进程（云查杀）|【病毒检测】定期扫描进程并监控进程启动事件，通过云查杀机制检测恶意病毒和木马进程。 【病毒查杀】支持在控制台一键中止进程和隔离恶意文件。
 
  【病毒查杀范围】
 
@@ -50,7 +50,7 @@
 -   病毒样本能力：基本覆盖全种类病毒，在云端集成国内外主流杀毒引擎、阿里云自研沙箱和机器学习引擎等。
 
  |X|√|√|
-|安全告警|进程异常行为|【异常行为检测】通过云上真实的攻防场景对入侵链路还原，建立进程行为白名单，对于进程的非法行为、黑客的入侵过程进行告警。 【异常行为检测范围】
+|进程异常行为|【异常行为检测】通过云上真实的攻防场景对入侵链路还原，建立进程行为白名单，对于进程的非法行为、黑客的入侵过程进行告警。 【异常行为检测范围】
 
 -   反弹Shell：检测Bash进程执行可疑指令，服务器被远程控制执行任意命令等。
 -   数据库异常指令执行：检测MySQL、PostgreSQL、SQLSserver、Redis、Oracle等数据库的异常指令。
@@ -61,7 +61,7 @@
  【异常行为检测能力】为数百个进程建立了近千个行为模型，通过比对模型分析异常行为。
 
  |X|√|√|
-|安全告警|敏感文件篡改|【篡改检测】实时监控敏感目录及文件，对于异常的读取、写入、删除等敏感操作进行告警。 【文件篡改检测范围】
+|敏感文件篡改|【篡改检测】实时监控敏感目录及文件，对于异常的读取、写入、删除等敏感操作进行告警。 【文件篡改检测范围】
 
 -   系统文件篡改：检测Bash、ps命令进程被恶意替换，隐藏的非法进程运行等。
 -   网站核心文件删除：检测黑客非法登录服务器后，恶意删除网站文件。
@@ -69,24 +69,24 @@
 -   其他可疑事件：检测Linux、MysqlDB等被勒索软件篡改登录界面、留下邮箱或比特币钱包地址等情形。
 
  |X|√|√|
-|安全告警|异常网络连接|【异常连接】在主机层和网络层对网络连接进行监控，识别非法的连接行为，并进行告警。 【异常连接检测范围】
+|异常网络连接|【异常连接】在主机层和网络层对网络连接进行监控，识别非法的连接行为，并进行告警。 【异常连接检测范围】
 
 -   主动外连：可疑shell反弹、Bash主动外连等主动外连到可疑IP。
 -   恶意攻击：被种植恶意软件，对外发动SYN-Flood、UDP-Flood、ICMP-Flood等恶意攻击。
 -   可疑通信：检测后门程序通信、可疑Webshell通信行为等。
 
  |X|√|√|
-|安全告警|云产威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
-|安全告警|应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
-|安全告警|自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
-|安全告警|其他|DDoS攻击行为检测。|X|X|√|
+|云产威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
+|应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
+|自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
+|其他|DDoS攻击行为检测。|X|X|√|
 |漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|√|
 |【漏洞修复】支持一键运行update升级命令修复漏洞，以及生成漏洞修复命令，用于手动修复。|X|√|√|
-|漏洞管理|Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|√|
+|Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|√|
 |【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|X|√|√|
-|漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|√|
+|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|X|√|√|
-|漏洞管理|应用漏洞|提供系统服务弱口令、系统服务和应用服务的漏洞检测及修复服务。|X|X|√|
+|应用漏洞|提供系统服务弱口令、系统服务和应用服务的漏洞检测及修复服务。|X|X|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。 【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
