--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -1,6 +1,6 @@
 # 功能特性 {#concept_fc1_xvb_zdb .concept}
 
-云盾云安全中心提供基础版、企业版和高级版3个版本，不同版本的功能参见本文的功能列表。
+云盾云安全中心提供基础版、高级版和企业版3个版本，不同版本的功能参见本文的功能列表。
 
 -   **基础版**免费为您提供基础**安全加固**能力，可检测主机异常登录及DDoS攻击、服务器漏洞和应急漏洞、以及云产品安全配置。您在购买ECS实例时选择**安全加固**即可开通基础版。
 
@@ -11,9 +11,9 @@
 
 ## 云安全中心基础版、高级版和企业版功能对比 {#section_gmh_xvb_zdb .section}
 
-下表罗列了云安全中心的功能详情3个版本之间的功能差异，其中用到的标识：
+下表罗列了云安全中心功能详情的3个版本之间的功能差异，其中用到的标识：
 
--   ×：表示不包含在服务范围中。
+-   X：表示不包含在服务范围中。
 -   √：表示包含在服务范围中。
 -   增值：表示需要在购买服务时单独勾选，才包含在服务范围中。
 
@@ -79,7 +79,7 @@
 |云产威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
 |应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
 |自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
-|其他|DDoS攻击行为检测。|X|X|√|
+|其他|DDoS攻击行为检测。|√|X|√|
 |漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|√|
 |【漏洞修复】支持一键运行update升级命令修复漏洞，以及生成漏洞修复命令，用于手动修复。|X|√|√|
 |Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|√|
