--- a/intl.zh-CN/用户指南/资产管理.md
+++ b/intl.zh-CN/用户指南/资产管理.md
@@ -11,13 +11,13 @@
 3.  展开筛选栏，使用搜索和筛选功能快速定位到特定资产。
     -   在搜索框中输入一个服务器的IP进行搜索，查看某台服务器的安全状态。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514854_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332214854_zh-CN.png)
 
-    -   使用**资产类型**、**标签**、**地域**、**安全状态**、**Agent**、**操作系统**、**所有分组**筛选项，筛选出指定的服务器。
+    -   使用**资产类型**、**ECS状态**、**标签**、**地域**、**安全状态**、**Agent**、**操作系统**、**所有分组**筛选项，筛选出指定的服务器。
 
         **说明：** 当筛选项中的子项太多不便查找时，您可以使用筛选项右侧的排序按钮进行排序（**所有分组**不支持此操作）。资产列表筛选项支持的排序方式包括A to Z/Z to A（筛选项名称字母组合升序、降序），1 to 9/9 to 1（筛选项下的资产数量升序、降序）。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514855_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332214855_zh-CN.png)
 
         -   展示单个筛选项结果：
 
@@ -31,19 +31,19 @@
 
             同时应用多个筛选项。例如，已筛选**地域**为**华东1**以后，再筛选**操作系统**为**Linux**，将为您展示华东1地域中的所有Linux系统服务器。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/155595735145121_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322250855_zh-CN.png)
 
         -   设置常用筛选条件：
 
             对于已应用的筛选项组合，您可以将其保存为常用筛选条件。单击**保存**，在保存搜索条件对话框为该筛选条件命名（例如华东1，Linux）后，就可以在页面右上角的条件框中直接选用该筛选条件。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514857_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322250860_zh-CN.png)
 
-    -   单击资产列表页右上角的**设置列**按钮，可以设置需要显示的列内容。
+    -   单击资产管理页右上角的**设置列**按钮，可以设置需要显示的列内容。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514858_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322250864_zh-CN.png)
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514859_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322250865_zh-CN.png)
 
 
 ## 开启/关闭实时防护 {#section_gff_khj_zdb .section}
@@ -54,15 +54,15 @@
 
 -   开启服务器防护状态：
 
-    在资产管理页面中，勾选一个或多个**实时防护**状态为**关闭**的目标服务器，并单击单击资产列表下方的**更多操作** \> **开启保护**。
+    在资产管理页面中，勾选一个或多个**实时防护**状态为**关闭**的目标服务器，并单击资产管理下方的**更多操作** \> **开启保护**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/155595735145124_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322350889_zh-CN.png)
 
 -   关闭服务器防护状态：
 
-    在资产管理页面中，勾选一个或多个**实时防护**状态为**关闭**的目标服务器，并单击单击资产管理下方的**更多操作** \> **暂停保护**。
+    在资产管理页面中，勾选一个或多个**实时防护**状态为**关闭**或**开启**的目标服务器，并单击单击资产管理下方的**更多操作** \> **暂停保护**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514860_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322350890_zh-CN.png)
 
 
 **说明：** 如果您在一段时间内不希望云安全中心Agent占用您的ECS云服务器资源，您可以参照以上步骤暂停对该服务器的安全防护。暂停保护后，云安全中心Agent插件停止工作，不再收集上报您服务器上的安全信息，请谨慎操作。
@@ -75,7 +75,7 @@
 2.  单击资产管理下方的**一键安全检查**。
 3.  在安全检查对话框中，勾选需要执行的检查项目。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573514861_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332234861_zh-CN.png)
 
 4.  单击**确认**，执行检查。
 
@@ -90,7 +90,7 @@
 1.  展开筛选栏后，在筛选栏最下面单击**所有分组**右侧的**管理**，打开资产分组管理对话框。
 2.  创建资产分组。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573516423_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332236423_zh-CN.jpg)
 
     **说明：** 未进行资产分组时，所有的资产都在**未分组**中。当您删除某个分组时，该分组中的资产也默认被移入**未分组**。
 
@@ -120,10 +120,10 @@
 
 参照以下步骤，将资产添加到指定资产组中：
 
-1.  在资产列表页，勾选一个或多个服务器资产，单击资产列表下方的**更换分组**。
+1.  在资产管理页，勾选一个或多个服务器资产，单击资产列表下方的**更换分组**。
 2.  选择一个新的资产分组，将选定的服务器资产划分到该分组。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573524863_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332234863_zh-CN.png)
 
     **说明：** 服务器资产与子分组不能归属在同一级资产分组。例如，资产分组A下已有子分组B，则您无法将服务器资产C放至资产分组A中。
 
@@ -140,13 +140,13 @@
 
     **说明：** 勾选一个或多个资产，单击资产列表下方的**编辑标签**，可以批量添加或修改目标资产的标签。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573526424_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/156223322450891_zh-CN.png)
 
 3.  在添加标签（或编辑标签）对话框中输入标签名或选择已有标签。
 
     **说明：** 一个资产支持添加多个标签。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573526427_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332246427_zh-CN.jpg)
 
 4.  单击**确认**，完成添加。
 
@@ -161,7 +161,7 @@
 1.  在资产管理列表中，勾选一个或多个非阿里云服务器。
 2.  单击资产管理列表下方的**更多操作** \> **删除非阿里云机器**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15559573524864_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15622332244864_zh-CN.png)
 
 3.  单击**确定**，系统会自动卸载安装在您服务器上的Agent插件，并将目标服务器从资产列表中移除。
 
