--- a/cn.zh-CN/用户指南/设置/通知.md
+++ b/cn.zh-CN/用户指南/设置/通知.md
@@ -6,9 +6,13 @@
 
 **说明：** 默认情况下，告警信息接收人为您的账号联系人。您可以前往[消息中心](https://notifications.console.aliyun.com/#/subscribeMsg)，在**基本接收管理** \> **安全消息** \> **云盾安全信息通知** \> **添加消息接收人**中，新增更多消息接收人。
 
+**通知的设置流程如下图所示。**
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144451025_zh-CN.png)
+
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)
-2.  在左侧导航栏，单击**设置** \> **通知**。
-3.  针对**漏洞**、**基线检查风险**、**安全告警**，分别勾选需要进行告警的安全事件等级（即**我关注的等级**）、**通知方式**、**通知时间**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156093492441262_zh-CN.png)
+2.  在左侧导航栏，单击**安全运营** \> **设置** \> **通知**。
+3.  针对**漏洞**、**基线检查**、**安全告警**，分别勾选需要进行告警的安全事件等级（即**我关注的等级**）、**通知方式**、**通知时间**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551027_zh-CN.png)
 
  
 
@@ -18,18 +22,22 @@
 
     如果您已安装钉钉并建立了相关钉钉群，可配置钉钉机器人通知。
 
-    1.  在**钉钉机器人通知**模块，单击**添加新的机器人**。
+    1.  在**钉钉机器人通知（Beta）**模块，单击**添加新的机器人**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156093492548697_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551028_zh-CN.png)
 
-    2.  在**钉钉机器人通知**页面，配置钉钉机器人参数项。
+    2.  在**添加钉钉机器人**页面，配置钉钉机器人参数项。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156093492548698_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551029_zh-CN.png)
 
         -   机器人名称：手动输入机器人名称。
         -   Webhook地址：在要应用该钉钉机器人的钉钉群中，找到机器人的Webhook链接，复制粘贴到**Webhook地址**输入栏中。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156093492548700_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551030_zh-CN.png)
+
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144651032_zh-CN.png)
+
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144651033_zh-CN.png)
 
             **说明：** 未安装钉钉并建立钉钉群的用户，无法使用钉钉机器人通知。如果已有钉钉群中未添加钉钉机器人，需要在钉钉群**群设置** \> **群机器人** \> **添加群机器人** \> **自定义（通过Webhook接入自定义服务）**，添加自定义机器人。
 
@@ -41,12 +49,13 @@
 
             **说明：** 目前，钉钉机器人通知范围覆盖漏洞、基线检查风险和安全告警。
 
-        -   通知频率控制：选择钉钉机器人发送通知的间隔周期，可选1分钟、5分钟、10分钟、30分钟或无限制（每检测到一条告警实时发送通知）。
+        -   通知频率：选择钉钉机器人发送通知的间隔周期，可选1分钟、5分钟、10分钟、30分钟或无限制（每检测到一条告警实时发送通知）。
+        -   通知语言：选择钉钉机器人发送通知的语言类型，可选中文、英文。
     3.  单击**添加**，完成钉钉机器人通知的创建。
 
         新创建的钉钉机器人通知是默认启用的。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156093492648704_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144651036_zh-CN.png)
 
         **说明：** 添加机器人通知后，需单击**操作**栏的**测试**，验证钉钉机器人通知是否已经和钉钉群连通。
 
