--- a/cn.zh-CN/用户指南/安全告警处理/安全告警类型概述.md
+++ b/cn.zh-CN/用户指南/安全告警处理/安全告警类型概述.md
@@ -4,6 +4,8 @@
 
 云安全中心支持对您已开启的告警防御能力提供总览，帮助您快速了解已开启和未开启的防御项目。您可在云安全中心控制台安全告警处理页面，查看已开启和未开启的防御项目。
 
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156335117251001_zh-CN.png)
+
 防御项目包含以下类型。
 
 -   异常登录
@@ -13,26 +15,20 @@
 -   异常网络连接
 -   敏感文件篡改
 -   恶意进程（云查杀）
--   应用白名单
--   进程异常行为
 -   网页防篡改
+-   进程异常行为
+-   云产品威胁检测
 -   异常事件
--   云产品检测威胁
--   异常网络连接
 -   应用入侵事件
+-   应用白名单
 -   精准防御（病毒自动查杀）
-
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155983466948525_zh-CN.png)
 
 除应用白名单和网页防篡改告警类型以外，云安全中心默认为用户开启所有的告警事件防御能力。
 
 **说明：** 
 
--   基础版用户默认只开启**异常登录**的防御能力。如需开通其他防御能力，需**升级**到高级版或 企业版。有关升级的相关内容，参见[服务续费与升级](../intl.zh-CN/产品定价/服务续费与升级.md#)。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155983466948526_zh-CN.png)
-
--   应用白名单和网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启应用白名单和网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。应用白名单详细操作参见[应用白名单](../intl.zh-CN/用户指南/应用白名单.md#)；网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/用户指南/网页防篡改/开通服务.md#)。
+-   基础版用户默认只开启**异常登录**的防御能力。如需开通其他防御能力，需**升级**到高级版或企业版。有关升级的内容，参见[服务续费与升级](../intl.zh-CN/产品定价/服务续费与升级.md#)。
+-   网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/用户指南/网页防篡改/开通服务.md#)。
 -   云产品威胁检测为企业版功能，企业版自动开启防御；高级版需要升级至企业版后才能自动开启防御。
 
 **安全告警类型** 
@@ -55,12 +51,12 @@
 -   对发现的木马文件支持隔离、恢复和忽略。
 
  |
-|**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登陆地，对指定资产的异地登陆行为进行告警。|
+|**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登录地，对指定资产的异地登录行为进行告警。|
 |**异常事件**|程序运行过程中发生的异常行为。|
 |**敏感文件篡改**|对服务器中的敏感文件进行恶意修改。|
 |**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/用户指南/安全告警处理/病毒云查杀.md#)。|
 |**异常网络连接**|网络显示断开或不正常的网络连接状态。|
-|**异常账号**|非合法登陆账号。|
+|**异常账号**|非合法登录账号。|
 |**云产品威胁检测**|云安全中心检测到您购买的其他阿里云产品存在的威胁。|
 |**精准防御**|开启**病毒查杀**提供精准防御能力，可对主流勒索病毒、DDOS木马、挖矿和木马程序、恶意程序、后门程序和蠕虫病毒等类型进行防御。|
 |**应用入侵事件**|通过系统的应用组件入侵服务器的告警事件。|
