--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -99,7 +99,7 @@
  |X|X|√|
 |攻击分析|攻击分析|【攻击分析】支持查看系统遭受的Web攻击详情和ECS遭受的暴力破解攻击等攻击信息。|X|X|√|
 |AK和账号密码泄露|AK和账号密码泄露|实时监控Github等第三方代码托管网站，捕获并判定被公开的源代码（包含企业员工私自上传并不小心公开的源代码）中是否含有ECS、RDS、Redis、MySQL等资产的登录名和密码信息。|X|X|√|
-|日志分析|全量日志分析|基于SLS日志，提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。 **说明：** 高级版支持主机日志和安全日志，不支持网络日志；企业版支持主机日志、安全日志和网络日志。
+|日志分析|全量日志分析|基于SLS日志，提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等原始日志检索和分析。 **说明：** 高级版支持主机日志和安全日志，不支持网络日志；企业版支持主机日志、安全日志和网络日志。
 
  |X|增值|增值|
 |资产指纹|资产指纹|【端口】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。 【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
